# vala-genie-experiments

./: CMakeLists.txt
builder/: CMakeLists.txt  builder.gs  window.glade
curses/: CMakeLists.txt  curses.gs
genieSQL/: CMakeLists.txt  builder.gs  connect_dialog.gs  mysql_connection.gs  window.glade
mysql/: CMakeLists.txt  mysql.gs
pidgin/: CMakeLists.txt  prpl-null.gs
